Sync Code Ocean updates: requirements and demo mode disabled

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,10 @@ pandas
 pillow
 tqdm
 ftfy
-regex
+# torch and torchvision (Standard installation for GitHub users)
 torch
 torchvision
-git+https://github.com/openai/CLIP.git
+
 seaborn
 scipy
 datasets
